# High_data_Pro1

./: CMakeLists.txt  Mytest.cc  README.md  embedding.patch  kvstore.cc  kvstore.h  output.txt  persistence.cc  skiplist.cpp  skiplist.h  sstable.cpp  sstable.h  sstablehead.h
embedding/: embedding.cc
handout/: embedding.patch
handout/data/: test_text.txt  test_text_ans.txt  trimmed_text.txt
test/: CMakeLists.txt  Embedding_Test.cpp
